Deploy-EKS/k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deploy
  namespace: go-survey
  labels:
    app: go-app
spec:
  selector:
    matchLabels:
      app: go-app
  replicas: 2
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app
          image: triple3a/gosurvey:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-app
  namespace: go-survey
  labels:
    app: go-app
spec:
  selector:
    app: go-app
  type: ClusterIP
  ports:
    - name: go-app
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  namespace: go-survey
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: survey.am-devops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-app
                port:
                  number: 8080
